# DDH2026-Kinetic-Ranger-osc

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.github/prompts/: claude-plan.md  plan-revisedKineticRanger.prompt.md
configs/: default.toml
docs/: plan-kineticRangerMvp.prompt.md
docs/netplan/: netplan-01-antsdr-split.yaml
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: MetricsPanel.tsx  RadarView.tsx  RecordButton.tsx  ReplayScrubber.tsx  RunsPanel.tsx  SignalGraph.tsx  SimulationControls.tsx  SourceSelector.tsx  ThreatBanner.tsx
frontend/src/lib/: config.ts  runsApi.ts  scenarios.ts  types.ts  websocket.ts
scripts/: smoke_api.py
src/kinetic_ranger/: __init__.py  __main__.py  cli.py  config.py  models.py
src/kinetic_ranger/ai/: __init__.py  vertex_summarizer.py
src/kinetic_ranger/alerting/: __init__.py  rules.py
src/kinetic_ranger/api/: __init__.py  ai_summary.py  main.py  recording.py  routes.py  schemas.py  simulation_service.py  websocket.py
src/kinetic_ranger/estimation/: __init__.py  ekf.py
src/kinetic_ranger/logging/: __init__.py  exporter.py  run_reader.py  run_writer.py  session_logger.py
src/kinetic_ranger/radio/: __init__.py  capture.py  features.py
src/kinetic_ranger/telemetry/: __init__.py  ingest.py
src/kinetic_ranger/ui/: __init__.py  dashboard.py
tests/: test_ai_summary.py  test_alerting.py  test_estimator.py  test_features.py  test_replay_roundtrip.py
