[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinetic-ranger"
version = "0.1.0"
description = "Passive RF closure detection and time-to-impact estimation for AntSDR E200 experiments."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Einar" }]
dependencies = [
    "numpy>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
ai = [
    "google-cloud-aiplatform>=1.60",
]
hardware = [
    "pyadi-iio>=0.0.17",
]
viz = [
    "plotly>=5.24",
]

[project.scripts]
kinetic-ranger = "kinetic_ranger.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
